<resources>
    <string name="app_name">Smart DTR</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="title_activity_homepage_teacher">activity_homepage_teacher</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="account_details">Account Details</string>
    <string name="name_label">Name:</string>
    <string name="student_id_label">Student ID:</string>
    <string name="email_label">E-mail:</string>
    <string name="mobile_number_label">Mobile Number:</string>
    <string name="date_of_birth_label">Date of Birth:</string>
    <string name="year_level_label">Year Level:</string>
    <string name="sex_label">Sex:</string>
    <string name="dtr_image_description">DTR Image</string>
    <string name="small_logo_description">Small Logo</string>
    <string name="smart_image_description">Smart Image</string>
    <string name="settingsIcon">Settings Icon</string>
    <string name="dtrIcon">Time Line Icon</string>
    <string name="homeIcon">Home Icon</string>
    <string name="wave3_top">wavetop</string>
    <string name="wave1">wave1</string>
    <string name="logo_name">SMART DTR</string>
    <string name="wave_buttom">Wave Buttom</string>
    <string name="title_activity_home_page_smart">activity_home_page_smart</string>
    <string name="wave_top">wavetop</string>
    <string name="logo">logo</string>
    <string name="tagline">Make Daily Time Record management more efficient and accessible"</string>
    <string name="wavebottom">wavebottom</string>
    <string name="btn_student">Student</string>
    <string name="btn_teacher">Teacher</string>
    <string name="profile_picture">profile_picture</string>
    <string name="top_wave">top_wave</string>
    <string name="duty_schedule_label">Duty Schedule</string>
    <string name="upcoming_date1">Pending: September 5, 2024</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="asdsadasds">asdsadasds</string>
    <string name="_58844848">58844848</string>
    <string name="history">History</string>
    <string name="teacher_name">teacher name</string>
    <string name="teacher_id">Teacher ID</string>
    <string name="teacher_email">teacher email</string>
    <string name="create_login_text">Make Daily Time Record management more efficient and accessible</string>
    <string name="title_activity_teacher_login">Teacher_login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password"> Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="bottom_wave">Bottom Wave</string>
    <string name="are_you_sure_you_want_to_log_out_your_account" />
    <string name="sure_to_logout_account">Are you sure you want to log out your account?</string>
    <string name="log_out">Log Out</string>
    <string name="cancel">Cancel</string>

    <string-array name="sex_options">
        <item>male</item>
        <item>female</item>
    </string-array>

    <string-array name="year_level">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="time_hour">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>

    <string-array name="time_minutes">
        <item>00</item>
        <item>30</item>
    </string-array>

    <string-array name="college_departments">
        <item>CITE</item>
        <item>CCJE</item>
        <item>CAHS</item>
    </string-array>
    <string name="title_activity_notification">notification</string>
    <string name="notification">Notification</string>
    <string name="select_all">Select All</string>
    <string name="p_e">P.E</string>
    <string name="subject">subject</string>
    <string name="id_number">ID Number</string>

</resources>