<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".activityTeachers.activity_login">

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="191dp"
        android:layout_height="181dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_1"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="29dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView18"
        app:layout_constraintEnd_toStartOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ellipse11"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15"
        app:srcCompat="@drawable/smart_dtr"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintEnd_toStartOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ellipse12"
        tools:ignore="MissingConstraints" />


    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="88dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView15"
        app:srcCompat="@drawable/ellipse13"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/wavebottom"
        android:scaleType="fitXY"
        android:src="@drawable/wave_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/black"

        android:textSize="20sp"
        android:fontFamily="@font/lilita_one"
        android:textColorHint="@color/gray"
        android:background="@drawable/custom_edittext"
        android:drawableEnd="@drawable/baseline_remove_red_eye_24"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIDNumber"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etIDNumber"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_edittext"
        android:ems="10"
        android:hint="ID Number"
        android:inputType="text"
        android:padding="10dp"
        android:fontFamily="@font/lilita_one"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView17"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="209dp"
        android:layout_height="58dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#041AE0"
        android:fontFamily="@font/lilita_one"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/don_t_have_an_account"
        android:fontFamily="@font/lilita_one"
        android:textColor="@color/brightred"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tvClickableSignUp"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogin" />

    <TextView
        android:id="@+id/tvClickableSignUp"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:background="@drawable/ripple_effect"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/lilita_one"
        android:text="@string/sign_up"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>